--- a/index.html
+++ b/index.html
@@ -968,7 +968,7 @@
     <!-- Footer -->
     <footer class="md:ml-80 bg-gray-800 text-white py-8">
         <div class="container mx-auto px-6 text-center">
-            <p class="mb-4">&copy; 2024 Aconselhamento Reformado: Teologia e Prática</p>
+            <p class="mb-4">&copy; 2025 Aconselhamento Reformado. Desenvolvido por Rodrigo Niskier, Gemini e POE.</p>
             <p class="text-gray-400 text-sm">Soli Deo Gloria</p>
         </div>
     </footer>
