--- a/index.html
+++ b/index.html
@@ -277,8 +277,8 @@
                         <i class="fas fa-book-open text-6xl text-primary mb-6"></i>
                         <h2 class="text-3xl font-bold mb-6 text-primary">Bem-vindo ao Estudo de Aconselhamento Reformado</h2>
                         <p class="text-lg text-gray-600 dark:text-gray-300 mb-8 leading-relaxed">
-                            Selecione um tópico no menu lateral para começar seus estudos. Este curso abrangente 
-                            cobrirá todos os aspectos fundamentais do aconselhamento cristão na tradição reformada.
+                            Selecione um tópico no menu lateral para começar seus estudos. Este estudo introdutório 
+                            cobrirá alguns dos aspectos fundamentais do aconselhamento cristão na tradição reformada.
                         </p>
                         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mt-8">
                             <div class="bg-blue-50 dark:bg-blue-900/20 p-6 rounded-xl border border-blue-200 dark:border-blue-800">
