--- a/index.html
+++ b/index.html
@@ -946,15 +946,15 @@
                                 <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
                                     <div class="bg-gray-50 dark:bg-gray-700 p-4 rounded-lg">
                                         <h4 class="font-semibold mb-2">ABCB</h4>
-                                        <p class="text-sm text-gray-600 dark:text-gray-300">Associação Brasileira de Conselheiros Bíblicos</p>
+                                        <p class="text-sm text-gray-600 dark:text-gray-300">Associação Brasileira de Conselheiros Bíblicos, link: "https://www.abcb.org.br/"</p>
                                     </div>
                                     <div class="bg-gray-50 dark:bg-gray-700 p-4 rounded-lg">
                                         <h4 class="font-semibold mb-2">CCEF</h4>
-                                        <p class="text-sm text-gray-600 dark:text-gray-300">Christian Counseling & Educational Foundation</p>
+                                        <p class="text-sm text-gray-600 dark:text-gray-300">Christian Counseling & Educational Foundation, link: "https://www.ccef.org/"</p>
                                     </div>
                                     <div class="bg-gray-50 dark:bg-gray-700 p-4 rounded-lg">
                                         <h4 class="font-semibold mb-2">Conexão Conselho Bíblico</h4>
-                                        <p class="text-sm text-gray-600 dark:text-gray-300">Portal em português com artigos de qualidade</p>
+                                        <p class="text-sm text-gray-600 dark:text-gray-300">Portal em português com artigos de qualidade, link: "https://conselhobiblico.com/"</p>
                                     </div>
                                 </div>
                             </div>
