--- a/index.html
+++ b/index.html
@@ -942,25 +942,35 @@
 
                             <!-- Recursos Online -->
                             <div>
-                                <h3 class="text-xl font-semibold mb-4 text-green-600 dark:text-green-400">Recursos Online</h3>
-                                <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
-                                    <div class="bg-gray-50 dark:bg-gray-700 p-4 rounded-lg">
-                                        <h4 class="font-semibold mb-2">ABCB</h4>
-                                        <p class="text-sm text-gray-600 dark:text-gray-300">Associação Brasileira de Conselheiros Bíblicos</p>
-                                        <p class= "link: https://www.abcb.org.br/"</p>
-                                    </div>
-                                    <div class="bg-gray-50 dark:bg-gray-700 p-4 rounded-lg">
-                                        <h4 class="font-semibold mb-2">CCEF</h4>
-                                        <p class="text-sm text-gray-600 dark:text-gray-300">Christian Counseling & Educational Foundation</p>
-                                        <p class= "link: https://www.ccef.org/"</p>
-                                    </div>
-                                    <div class="bg-gray-50 dark:bg-gray-700 p-4 rounded-lg">
-                                        <h4 class="font-semibold mb-2">Conexão Conselho Bíblico</h4>
-                                        <p class="text-sm text-gray-600 dark:text-gray-300">Portal em português com artigos de qualidade</p>
-                                        <p class="link: https://conselhobiblico.com/"</p>
-                                    </div>
-                                </div>
-                            </div>
+    <h3 class="text-xl font-semibold mb-4 text-green-600 dark:text-green-400">Recursos Online</h3>
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
+        <div class="bg-gray-50 dark:bg-gray-700 p-4 rounded-lg">
+            <h4 class="font-semibold mb-2">ABCB</h4>
+            <p class="text-sm text-gray-600 dark:text-gray-300">Associação Brasileira de Conselheiros Bíblicos</p>
+            <a href="https://www.abcb.org.br/" target="_blank" rel="noopener noreferrer" 
+               class="inline-block mt-2 text-green-700 dark:text-green-300 underline hover:text-green-900 transition">
+               Acesse o site
+            </a>
+        </div>
+        <div class="bg-gray-50 dark:bg-gray-700 p-4 rounded-lg">
+            <h4 class="font-semibold mb-2">CCEF</h4>
+            <p class="text-sm text-gray-600 dark:text-gray-300">Christian Counseling & Educational Foundation</p>
+            <a href="https://www.ccef.org/" target="_blank" rel="noopener noreferrer" 
+               class="inline-block mt-2 text-green-700 dark:text-green-300 underline hover:text-green-900 transition">
+               Acesse o site
+            </a>
+        </div>
+        <div class="bg-gray-50 dark:bg-gray-700 p-4 rounded-lg">
+            <h4 class="font-semibold mb-2">Conexão Conselho Bíblico</h4>
+            <p class="text-sm text-gray-600 dark:text-gray-300">Portal em português com artigos de qualidade</p>
+            <a href="https://conselhobiblico.com/" target="_blank" rel="noopener noreferrer" 
+               class="inline-block mt-2 text-green-700 dark:text-green-300 underline hover:text-green-900 transition">
+               Acesse o site
+            </a>
+        </div>
+    </div>
+</div>
+
                         </div>
                     </div>
                 </section>
